--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blackhand&display=swap">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bäckerei Die Drei Duman</title>
+    <title>Bäckerei Die Drei Duman </title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="content">
             <h1>Willkommen in der Bäckerei!</h1>
             <p>Laden Sie Ihre Datei hier hoch:</p>
-            <button id="uploadButton">Datei auswählen</button>
+            <button id="uploadButton"> hier Datei auswählen</button>
             <input type="file" id="fileInput" style="display: none;">
         </div>
     </div>
