--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,24 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blackhand&display=swap">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bäckerei Die Drei Duman </title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Bäckerei Die Drei Duman</title>
+    <!-- Verwende Flask's url_for, um die CSS-Datei korrekt zu verlinken -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="images/logo.svg" alt="Bäckerei Logo" class="logo">
+            <!-- Verwende Flask's url_for, um das Bild korrekt zu verlinken -->
+            <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="Bäckerei Logo" class="logo">
         </header>
         <div class="content">
             <h1>Willkommen in der Bäckerei!</h1>
             <p>Laden Sie Ihre Datei hier hoch:</p>
-            <button id="uploadButton"> hier Datei auswählen</button>
+            <button id="uploadButton">hier Datei auswählen</button>
             <input type="file" id="fileInput" style="display: none;">
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <!-- Verwende Flask's url_for, um die JS-Datei korrekt zu verlinken -->
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
