--- a/templates/index.html
+++ b/templates/index.html
@@ -4,39 +4,28 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Blackhand&display=swap">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bäckerei Die Drei Duman</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <title>Bäckerei Die Drei Duman </title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="Bäckerei Logo" class="logo">
+            <img src="images/logo.svg" alt="Bäckerei Logo" class="logo">
         </header>
         <div class="content">
             <h1>Willkommen in der Bäckerei!</h1>
             <p>Laden Sie Ihre Datei hier hoch:</p>
-            <button id="uploadButton">Hier Datei auswählen</button>
-            <input type="file" id="fileInput" style="display: none;" onchange="uploadFile()">
+            <form id="uploadForm" enctype="multipart/form-data">
+                <input type="file" id="fileInput" name="image" required>
+                <button type="submit">Bild hochladen</button>
+            </form>
+            <div id="result" style="display: none;">
+                <h2>Analyse-Ergebnis:</h2>
+                <p id="resultText"></p>
+                <img id="uploadedImage" src="" alt="Hochgeladenes Bild" style="max-width: 100%; height: auto;">
+            </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    <script>
-        function uploadFile() {
-            var fileInput = document.getElementById('fileInput');
-            var file = fileInput.files[0];
-            var formData = new FormData();
-            formData.append('image', file);
-
-            fetch('/upload', {
-                method: 'POST',
-                body: formData
-            }).then(response => response.text())
-              .then(data => {
-                  document.body.innerHTML = data;
-              }).catch(error => {
-                  console.error('Fehler:', error);
-              });
-        }
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
