--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,8 @@
         <div class="content">
             <h1>Willkommen in der Bäckerei!</h1>
             <p>Laden Sie Ihre Datei hier hoch:</p>
-            <form id="uploadForm" enctype="multipart/form-data">
-                <input type="file" id="fileInput" name="image" required>
-                <button type="submit">Bild hochladen</button>
-            </form>
-            <div id="result" style="display: none;">
-                <h2>Analyse-Ergebnis:</h2>
-                <p id="resultText"></p>
-                <img id="uploadedImage" src="" alt="Hochgeladenes Bild" style="max-width: 100%; height: auto;">
-            </div>
+            <button id="uploadButton">Hier Datei auswählen</button>
+            <input type="file" id="fileInput" style="display: none;">
         </div>
     </div>
     <script src="js/script.js"></script>
